--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "laravel/telescope": "^5.16",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
+        "nunomaduro/larastan": "*",
         "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^11.5.3",
         "squizlabs/php_codesniffer": "^4.0"
