--- a/deploy/prod/compose.yaml
+++ b/deploy/prod/compose.yaml
@@ -1,27 +1,34 @@
 services:
   app:
-    image: sail-8.5/app:latest
-    command: ["php-fpm"]
+    image: ghcr.io/penarrocha/myshop-app:prod
     env_file:
       - /opt/myshop/.env
+    command: ["php-fpm", "-F"]
     depends_on:
       mysql:
         condition: service_healthy
       redis:
         condition: service_started
-    networks:
-      - myshop
+    networks: [myshop]
+
+  worker:
+    image: ghcr.io/penarrocha/myshop-app:prod
+    env_file:
+      - /opt/myshop/.env
+    command: ["php", "artisan", "queue:work", "--sleep=1", "--tries=3", "--timeout=90"]
+    depends_on:
+      mysql:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    networks: [myshop]
 
   nginx:
-    image: nginx:1.27-alpine
-    depends_on:
-      - app
+    image: ghcr.io/penarrocha/myshop-nginx:prod
+    depends_on: [app]
     ports:
       - "80:80"
-    volumes:
-      - ./docker/prod/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    networks:
-      - myshop
+    networks: [myshop]
 
   mysql:
     image: mysql:8.4
@@ -32,8 +39,7 @@ services:
       MYSQL_ROOT_PASSWORD: rootpassword
     volumes:
       - mysql_data:/var/lib/mysql
-    networks:
-      - myshop
+    networks: [myshop]
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 5s
@@ -44,21 +50,7 @@ services:
     image: redis:7-alpine
     volumes:
       - redis_data:/data
-    networks:
-      - myshop
-
-  worker:
-    image: myshop-app:latest
-    env_file:
-      - /opt/myshop/.env
-    depends_on:
-      mysql:
-        condition: service_healthy
-      redis:
-        condition: service_started
-    command: ["php", "artisan", "queue:work", "--sleep=1", "--tries=3", "--timeout=90"]
-    networks:
-      - myshop
+    networks: [myshop]
 
 networks:
   myshop: {}
