--- a/deploy/prod/nginx/default.conf
+++ b/deploy/prod/nginx/default.conf
@@ -34,8 +34,8 @@ server {
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $document_root;
     }
 
     location ~ /\.(?!well-known).* {
